--- a/notebooks/nfl_player_projections_technical_notebook.ipynb
+++ b/notebooks/nfl_player_projections_technical_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NFL Combine Classification Modeling\n",
+    "# NFL Player Projection Models\n",
     "\n",
     "## Technical Notebook"
    ]
@@ -15,9 +15,7 @@
    "source": [
     "## Project Goals\n",
     "\n",
-    "- Determine the influence the NFL Combine has on a lineman (offensive linemen and defensive linemen) prospect's draft status (getting drafted or not).\n",
-    "- Discover which NFL Combine drills have the most impact on a lineman (offensive linemen and defensive linemen) prospect's draft position.\n",
-    "- Reveal how much the NFL Combine factors in on a lineman (offensive linemen and defensive linemen) prospect's draft value (how early or how late a prospect gets drafted, if at all). **(*FUTURE WORK*)**"
+    "- Building models with college player statistics to make NFL Draft, Hall of Fame, All-Pro, and Pro Bowl player projections before they play in the NFL."
    ]
   },
   {
@@ -26,7 +24,7 @@
    "source": [
     "## Summary of Data\n",
     "\n",
-    "The dataset that was analyzed for this study contains 9,544 observations of NFL Combine and NFL Draft data, dating from 1987-2017. The NFL Combine data primarily displays the performance of players over that time period in combine drills. The NFL Draft data contains the draft pick information of players from that time span, including what round they were selected in and the team that picked them."
+    "The dataset that was analyzed for this study contains 30 years of NFL Draft, NFL Combine, and NCAA Football PLayer Statistics data, dating from 1985-2015. The NFL Draft data contains the draft pick information of players from that time span, including what round they were selected in and the team that picked them. The NFL Combine data primarily displays the performance of players over that time period in combine drills. The NCAA Football Player Statistics data contains full college career statistics accumulated by players in all games during their career."
    ]
   },
   {
