--- a/notebooks/nfl_player_projections_technical_notebook.ipynb
+++ b/notebooks/nfl_player_projections_technical_notebook.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Project Goals\n",
     "\n",
-    "- Building models with college player statistics to make NFL Draft, Hall of Fame, All-Pro, and Pro Bowl player projections before they play in the NFL."
+    "- Building models with college player statistics to make NFL Draft, Hall of Fame, All-Pro First Team, and Pro Bowl running back projections before they play in the NFL."
    ]
   },
   {
@@ -24,7 +24,9 @@
    "source": [
     "## Summary of Data\n",
     "\n",
-    "The dataset that was analyzed for this study contains 30 years of NFL Draft, NFL Combine, and NCAA Football PLayer Statistics data, dating from 1985-2015. The NFL Draft data contains the draft pick information of players from that time span, including what round they were selected in and the team that picked them. The NFL Combine data primarily displays the performance of players over that time period in combine drills. The NCAA Football Player Statistics data contains full college career statistics accumulated by players in all games during their career."
+    "The dataset that was analyzed for this study contains 1815 running back observations from five decades of NFL Draft and College Football Player Statistics data that was obtained from Pro Football Reference. The dataset only includes data from the NFL Post-Merger (after the NFL and AFL merged) years (from 1970-Present). The NFL Draft data contains the draft pick information of players from that time span, including what round they were selected in and the team that picked them. The College Football Player Statistics data contains full college career statistics accumulated by players in all games during their career.\n",
+    "\n",
+    "Also, since no running backs drafted after 2001 have been inducted into the Hall of Fame yet, we cannot use any data from after 2001 in our one model that predicts a player's Hall of Fame likelihood."
    ]
   },
   {
